# linux_ota

./: .gitignore  CMakeLists.txt
ab_meta/include/: rk_ab_meta.h
ab_meta/src/: rk_ab_meta.c
flash/include/: dl_flash.h  emmc_flash.h  rk_flash.h
flash/src/: dl_flash.c  emmc_flash.c  emmc_flash.h  mtd_flash.c  mtd_flash.h  nand_flash.c  nand_flash.h  nor_flash.c  nor_flash.h  rk_flash.c  rk_flash.h
include/: flash_mtd.h
ota/include/: bootloader.h
ota/src/: bootloader.c  flash_mtd.c  flash_mtd.h
src/: bootloader.c  common.h  flash_mtd.c  md5sum.c  md5sum.h
test/: main.c
test/app_log/include/: my_debug.h
test/app_log/src/: my_debug.c
test/eventhub/include/: hi_eventhub.h  hi_eventhub_msg.h
test/openssl/lib/: libcrypto.so.1.1  libssl.so.1.1
test/utils/include/: list.h  my_types.h  pt_semaphoer.h  pthread_attr.h  rk_cpu_info.h  uname_pipe.h  utils.h
test/utils/src/: pt_semaphoer.c  pthread_attr.c  rk_cpu_info.c  uname_pipe.c  utils.c
upgrade/include/: dl_upgrade.h
upgrade/src/: dl_upgrade.c
